[workspace]
resolver = "2"

default-members = ["tests"]

members = [
	# @@INSERTION_POINT@@
	"contracts/ccc-btc",
	"contracts/ccc-eth",
	"contracts/ccc-sol",
	"contracts/delegate-lock",
	"contracts/secp256k1-blake160",
	"helper",
	"tests",
]

[profile.release]
overflow-checks = true
strip = false
codegen-units = 1
debug = true
