[package]
name = "tests"
version = "0.1.0"
edition = "2021"

[features]
native-simulator = ["ckb-testtool/native-simulator"]

[dependencies]
ckb-hash = "1.0.1"
ckb-testtool = "1.0.0"
ckb-types = "1.0.2"
k256 = { version = "0.13.4", default-features = false, features = ["ecdsa"] }
serde_json = "1.0"
ckb-always-success-script = "0.0.1"
sha2 = "0.10"
ripemd = "0.1.3"
sha3 = "0.10"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
rand = "0.8"
hex = "0.4"
