[package]
name = "ccc-btc-delegate"
version = "0.1.0"
edition = "2021"

[dependencies]
ckb-std = "1.0.2"
ckb-lock-helper = { path = "../../helper", package = "delegate-lock-helper" }
k256 = { version = "0.13.4", default-features = false, features = [
    "arithmetic",
    "ecdsa",
    "alloc",
] }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
sha2 = { version = "0.10.8", default-features = false }
ripemd = { version = "0.1.3", default-features = false }
