[package]
name = "ccc-eth-delegate"
version = "0.1.0"
edition = "2021"

[dependencies]
ckb-std = "1.0.2"
ckb-lock-helper = { path = "../../helper", package = "delegate-lock-helper" }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
k256 = { version = "0.13.4", default-features = false, features = [
    "arithmetic",
    "ecdsa",
    "alloc",
] }
sha3 = { version = "0.10.8", default-features = false }
